# IDS706--Rust-CLI-Binary-YuhanXue

./: Cargo.toml  Makefile  README.md  diabetes.db
.github/workflows/: rs_cicd.yml
src/: lib.rs  main.rs
tests/: test_rust.rs
