[package]
name = "IDP2_yuhan_rust"
version = "0.1.0"
authors = ["Yuhan Xue"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
rusqlite = {version = "0.29", features=["bundled"]}
csv = "1.1"
